style.css
html {
  scroll-behavior: smooth;
  box-sizing: border-box;
  height: 100%;
}

body {
  background-color: #1e1e1e;
  color: #cecece;
  font-family: "Segoe UI", Tahoma, Helvetica, Arial, Verdana, sans-serif;
  font-size: 20px;             
  margin: 0;
  padding: 0;
  text-align: justify;
  height: 100%;
}

a {
  text-decoration: none;
  color: #a5d7e4;
  transition: 0.3s;
}

a:hover {
  color: #fff;
  transition: 0.3s;
}

#header {
  background-color: #2e2e2e;
  font-size: 25px;
  padding: 5px 20px 5px 20px; /*top right bottom left*/
}

#logo {
  padding-top: 10px;
}

#logo img {
  width: 70px;
  height: auto;
}

#sub_header {
  margin: 0; 
  list-style-type: none;
}

#sub_header > li {
  display: inline-block; 
  transition: all .2s linear; 
  padding: 10px 20px 10px 20px;
}

#sub_header > li > a {
  color: #FFF; 
  display: block; 
  transition: 0.3s;
}

#sub_header > li:hover {
  color: #FFF; 
  background-color: #434343; 
  transition: 0.3s; 
  border-radius: 3px;
}

#sub_header img {
  margin-bottom: -5px;
  width: 25px;
  height: auto;
}

#banner {
  color: #fff;
  text-shadow: 2px 2px #595959;
  background-image: url("banner.jpg");
  background-size: cover; /*fa sì che un immagine in bg copra l'intero div*/
  padding: 80px 0px 80px 60px; 
}

#content {
  padding: 40px 80px 0 80px;
  box-sizing: border-box;
  min-height: 100%;
  height: auto !important;
  height: 100%;
  padding-bottom: 60px;
}

#container {
  text-align: center;
  border: 2px solid #434343;
  border-radius: 10px;
  background-color: #2e2e2e;
}

#container td {
  padding: 10px 25px 10px 25px;
  transition: 0.3s;
}

#highlight {
  transition: 0.3s;
  padding: 5px 5px 5px 5px;
}

#highlight:hover {
  background-color: #434343;
  border-radius: 10px;
  transition: 0.3s;
}

#footer {
  font-size: 15px;
  color: #b8b8b8;
  background-color: #2e2e2e;
  padding: 15px 40px 15px 40px;
}

#footer img {
  width: 15px;
  height: auto;
  margin-bottom: -2px;
  padding-left: 8px;
}

#footer a {
  color: #b8b8b8;
}

#input {
  background-image: url('search.png');
  background-size: 20px;
  background-position: 10px 12px; /* Position the search icon */
  background-repeat: no-repeat; /* Do not repeat the icon image */
  background-color: #434343;
  color: #cecece;
  width: 100%;
  box-sizing: border-box; /* include il padding in larghezza e altezza */
  font-size: 16px;
  padding: 12px 0px 12px 40px;
  border: 0px;
  border-radius: 5px;
  margin-bottom: 20px; /* Add some space below the input */
  transition: 0.3s;
}

#input:focus {
  outline:none!important; /* da finire */
  background-color: #2e2e2e;
  transition: 0.3s;
}

#option {
  /* Remove default list styling */
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#option li a {
  border: 0px solid #434343; /* Add a border to all links */
  border-radius: 5px;
  margin-top: -1px; /* Prevent double borders */
  margin-bottom: 10px;
  background-color: #2e2e2e; /* Grey background color */
  padding: 12px; /* Add some padding */
  font-size: 18px;
  display: block; /* Make it into a block element to fill the whole list */
}

#option li a:hover:not(.header) {
  background-color: #434343; /* Add a hover effect to all links, except for headers */
}


/* Dropdown */

.dropbtn {
  cursor: pointer;
}

.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #2e2e2e;
  min-width: 200px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1; /*set the overlap level*/
  right: 0;
  margin-top: 20px;
  margin-right: -20px;
  border-radius: 3px;
  font-size: 22px;
  
}

.dropdown-content hr {
  margin: 0 5px 0 5px;
}

.dropdown-content a {
  padding: 12px 16px 12px 20px;
  text-align: left;
  display: block;
}

.dropdown-content a:hover {
  background-color: #434343;
}

/* Show the dropdown menu (JS) */
.show {
  display:block;
}

/* Slideshow container */
.slideshow-container {
  position: relative;
  padding: 10px 10px 5px 10px;
}

.slideshow-container img {
  border-radius: 10px;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

#slide1 {
  display:block;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* Position the "next button" to the left */
.prev {
  left: 0;
  border-radius: 0 3px 3px 0;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.5);
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 10px;
  width: 10px;
  margin: 20px 2px;
  background-color: #717171;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #bbb;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

